Layout fix
Force scrollbar to always be present to prevent layout shifts
when the scrollbar appears or disappears.

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,12 +32,13 @@ p, h1, h2, h3, h4, h5, h6 {
 /* COMMON STYLING */
 :root {
     --nav-color: rgba(0, 0, 0, 0.5);
-    --black: #262322;
+    --background-color: #333;
     --brown: #63372C;
     --sienna: #C97D60;
 }
 
 body {
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -45,6 +46,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 #content {
@@ -126,11 +128,13 @@ nav img {
 
 /* Menu Page */
 .menu-container {
+    height: 80vh;
+    width: 100%;
     padding: 40px 0px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 28px;
-    /* background-color: var(--nav-color); */
+    /* overflow-y: auto; */
 }
 
 .menu-item {
@@ -139,7 +143,7 @@ nav img {
     align-items: center;
     justify-content: center;
     font-family: "Zilla Slab", sans-serif;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 .menu-item img {
@@ -150,6 +154,7 @@ nav img {
 
 .menu-item p {
     text-align: center;
+    font-weight: 500;
     width: 50%;
 }
 
